--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer src="./js/main.js"></script>
+    <script src="./js/auth.js" defer></script>
+    <script src="./js/partners.js" defer></script>
   </head>
 
   <body>
